<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coordinates">Координаты: </string>
    <string name="temperature_header">Температура: </string>
    <string name="feels_like_header">Температура ощущается как: </string>
    <string name="snack_text">Не получилось загрузить данные…</string>
    <string name="snack_action_text">Ещё раз?</string>
    <string name="humidity_header">Влажность: </string>
    <string name="condition_header">Состояние погоды: </string>
    <string name="history_menu_title">history</string>
    <string name="provider_menu_title">provider</string>
    <string name="call_access">Доступ к звонкам</string>
    <string name="call_message_text">Требуется доступ к звонкам, в случае отказа в доступе приложение не будет работать</string>
    <string name="contacts_access">Доступ к контактам</string>
    <string name="contacts_access_message">Требуется доступ к контактам, в случае отказа в доступе приложение не будет работать</string>
    <string name="yes_alert_button">Да, разрешаю</string>
    <string name="no_alert_button">Нет</string>
    <string name="name_title">Имя:</string>
    <string name="phone_title">Телефон:</string>
    <string name="GPS_accsess">Доступ к GPS</string>
    <string name="GPS_explanation">Для точного определения местоположения требуется доступ к GPS</string>
    <string name="GEO_accsess">Доступ к геоданным</string>
    <string name="GEO_explanation">В случае отказа доступа, приложение будет работать некорректно</string>
    <string name="GEO_disabled">Геоданные отключены, возможны проблемы с геолокацией</string>
    <string name="smth_went_wrong">Что то пошло не так</string>
    <string name="adress_question">Адрес указан верно?</string>
    <string name="yes">Да</string>
    <string name="GEO_accsess_disabled">Доступ к геоданным отключен, последняя локация неизвестна</string>
    <string name="last_location_shown">Показана последняя известная локация. Включите GPS!</string>
    <string name="maps">maps</string>
    <string name="enter_address">Введите адрес</string>
    <string name="button_search_map">Поиск</string>
    <string name="find_weather">Узнать погоду</string>
    <string name="searchText_mistake">Ошибка ввода</string>
    <string name="check_text">Проверьте правильность ввода!</string>
    <string name="channel_name_low">Low priority Channel</string>
    <string name="channel_desc">Channel description</string>
    <string name="channel_name_high">High priority Channel</string>

</resources>