<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    android:orientation="vertical">

    <EditText
        android:id="@+id/searchAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address"
        android:autofillHints=""
        android:layout_marginTop="10dp"
        android:inputType="textPersonName" />



        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search_map" />

        <Button
            android:id="@+id/buttonSearchWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_weather" />


    <include layout="@layout/fragment_maps" />

</LinearLayout>
